--- a/FinalProject/app/src/main/res/layout/fragment_main.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_main.xml
@@ -10,15 +10,16 @@
     tools:context=".MainActivityFragment">
 
     <TextView
-        android:id="@+id/instructions_text_view"
+        android:id="@+id/instructionsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/instructions" />
 
     <Button
+        android:id="@+id/tellJokeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/instructions_text_view"
+        android:layout_below="@+id/instructionsTextView"
         android:onClick="tellJoke"
         android:text="@string/button_text" />
 
